# gbc

./: .gitignore  AGENTS.md  README.md  calc.md  gen_ruler.py  import_baseline.py  main.py  mobiles.json  next_steps.md  physics.md  pyproject.toml  requirements.txt  ruler.py  time_scale.md  training_data.json
.agents/: PROJECT_MEMORY.md  WIND_READER_MEMORY.md  next_steps_v2.md
config/: mobiles_v2.json
data/: training_data.json  wind.json
docs/: data_collection.md  memory_analysis.md  physics.md  wind_reader.md
legacy/: calc_legacy.py  calc_v2.py
ref/: memory.py
scripts/: check_armor_outliers.py  import_baseline.py
src/gunbound/: __init__.py  calibration.py  cli.py  constants.py  inference.py  matching.py  models.py  physics.py  position_capture.py  solver.py  storage.py
tests/: test_inference.py
tools/: gen_ruler.py  memory_reader.py  ruler.py  wind_reader.py
